[package]
name = "roxmltree-relaxed"
version = "0.18.0"
authors = ["Yevhenii Reizner <razrfalcon@gmail.com>", "Merlyn Morgan-Graham <kavika@gmail.com>"]
keywords = ["xml", "parser", "tree", "dom"]
categories = ["parser-implementations"]
license = "MIT OR Apache-2.0"
description = "Represent an XML as a read-only tree."
repository = "https://github.com/kavika13/roxmltree-relaxed"
documentation = "https://docs.rs/roxmltree/"
readme = "README.md"
edition = "2018"

[workspace]
members = ["benches"]
exclude = ["test-apps", "testing-tools"]

[dependencies]
xmlparser-relaxed = { git = "https://github.com/kavika13/xmlparser-relaxed.git", branch = "master" }

[features]
default = ["std", "positions"]
std = []
# Enables Nodes and Attributes position in the original document preserving.
# Increases memory usage by `usize` for each Node and Attribute.
positions = []
